--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div>RAJA T</div>  
-      <img src="./_07A5250.JPG" style="width: 400;height: 550;">   
+      <img src="./RT.png">   
   </body>
 </html>
