--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div>RAJA T</div>  
-      <img src="./RT.png">   
+      <img src="./RT.png" style="border-radius: 10%;">   
   </body>
 </html>
