--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
+    <title>
+      RAJA T - Product Architect
+    </title>
+  </head>
   <body>
-    <div>RAJA T</div>  
-      <img src="./RT.png" style="border-radius: 10%;">   
+    <div>
+    <b><p>Protfoli<span class="me">o</span></p></b>
+    </div>
+    <div class="header-padding">
+        <h1><b>About</b><span class="me"> Me</span></h1>
+        <h3>I'am Raja Thangaraju, Product Architect<br>from Coimbatore, Tamil Nadu</h3>
+        <p style="text-align: justify;">Focused professional having excellent technical skills, and 
+          offering 12 years of experience in Computer industry. Proficient at solutioning, designing, datamodeling, developing 
+          and deploying, writing code in various languages, feature development and implementation. 
+          Specialize outside the box to find unique solutions to diffect engineering problems. </p>
+          <div class="image-padding">
+            <img src="./RT.png" style="border-radius: 50%;">
+          </div>   
+    </div>
+    
   </body>
 </html>
