--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
     <title>
-      RAJA T - Product Architect
+      Raja Thangaraju - Product Architect
     </title>
   </head>
   <body>
