--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   </div>
   <div class="header-padding">
     <h1><b>About</b><span class="me"> Me</span></h1>
-    <h3>I'am Raja Thangaraju, Product Architect<br>from Coimbatore, Tamil Nadu</h3>
+    <h3>I'am Raja Thangaraju, <br>Solution Designer | Technical Lead | Sr. Developer<br>from Coimbatore, Tamil Nadu</h3>
+    <h5>Mobile : +91-9944883390<br>
+      E-Mail : rajaabtechit@gmail.com
+    </h5>
     <p>Focused professional having excellent technical skills, and
       offering 12 years of experience in Computer industry. Proficient at solutioning, designing, datamodeling,
       developing
