--- a/index.html
+++ b/index.html
@@ -12,24 +12,48 @@
 </head>
 
 <body>
-  <div>
-    <b>
+  <header><b>
       <p>Protfoli<span class="me">o</span></p>
     </b>
+  </header>
+  <div>
+    <div class="aboutme">
+      <h1><b>About</b><span class="me"> Me</span></h1>
+      <h3>I'am Raja Thangaraju, <br>Solution Designer | Technical Lead | Sr. Developer<br>from Coimbatore, Tamil Nadu
+      </h3>
+      <h5>Mobile : +91-9944883390<br>
+        E-Mail : rajaabtechit@gmail.com
+      </h5>
+      <p style="text-align: justify;">Focused professional having excellent technical skills, and
+        offering 12 years of experience in Computer industry. Proficient at solutioning, designing, datamodeling,
+        developing
+        and deploying, writing code in various languages, feature development and implementation.
+        Specialize outside the box to find unique solutions to diffect engineering problems. </p>
+    </div>
+    <div class="photo"><img src="RT.png" style="border-radius: 50%;"></div>
   </div>
-  <div class="header-padding">
-    <h1><b>About</b><span class="me"> Me</span></h1>
-    <h3>I'am Raja Thangaraju, <br>Solution Designer | Technical Lead | Sr. Developer<br>from Coimbatore, Tamil Nadu</h3>
-    <h5>Mobile : +91-9944883390<br>
-      E-Mail : rajaabtechit@gmail.com
-    </h5>
-    <p>Focused professional having excellent technical skills, and
-      offering 12 years of experience in Computer industry. Proficient at solutioning, designing, datamodeling,
-      developing
-      and deploying, writing code in various languages, feature development and implementation.
-      Specialize outside the box to find unique solutions to diffect engineering problems. </p>
+  <div class="experience">
+    <h4>Experience</h4>
   </div>
+  <div class="skills">
+    <h4>What Skill I Have</h4>
+    <ul class="card">
+      <li>Java</li>
+      <li>REST API - Jersey</li>
+      <li>VB.NET</li>
+      <li>C#.NET</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Flutter</li>
+      <li>Dart</li>
+      <li>MySQL</li>
+      <li>Apache Solr</li>
+    </ul>
+  </div>
+  <div class="responsibility"></div>
+  <footer>
 
+  </footer>
 </body>
 
 </html>
